--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
 
-                <!-- Loop over the collection of products -->
+                <!-- loop over the collection of products -->
                 <div *ngFor="let tempProduct of products" class="col-md-3">
 
                     <div class="product-box">
