--- a/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -3,8 +3,8 @@
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
-      <a href="#">
-        <img src="assets/images/products/logo.png" alt="luv2shop" class="img-responsive">
+      <a routerLink="/products">
+        <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
       </a>
     </div>
 
@@ -13,7 +13,6 @@
   </aside>
   <!-- END MENU SIDEBAR-->
 
-  <!-- PAGE CONTAINER-->
   <div class="page-container">
     <!-- HEADER DESKTOP-->
     <header class="header-desktop">
@@ -21,14 +20,10 @@
         <div class="container-fluid">
           <div class="header-wrap">
 
-
             <app-search></app-search>
+ 
+            <app-cart-status></app-cart-status>
 
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
           </div>
           <div class="account-wrap"></div>
         </div>
@@ -42,7 +37,7 @@
   </div>
 </div>
 
-<!-- END PAGE CONTAINER-->
+<!-- ENDS PAGE CONTAINER -->
 
 <footer>
   <ul>
