--- a/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -2,17 +2,15 @@
     <div class="container-fluid">
 
         <img src="{{ product.imageUrl }}" class="detail-img">
+
         <h3>{{ product.name }}</h3>
         <div class="price">{{ product.unitPrice | currency:'USD' }}</div>
-        <a href="#" class="primary-btn">Add to cart</a>
+        <button (click)="addToCart()" class="btn btn-primary btn-sm">Add to cart</button>
 
         <hr>
         <h4>Description</h4>
         <p>{{ product.description }}</p>
 
-        <a routerLink="/prducts" class="primary-btn">Back to Product List</a>
+        <a routerLink="/products" class="mt-5">Back to Product List</a>
     </div>
 </div>
-
-
-
